--- a/src/languages/de-DE.json
+++ b/src/languages/de-DE.json
@@ -17,11 +17,11 @@
 	"global_cannot_action_owner": "{emote_warn} Du kannst diese Aktion nicht am Servereigentümer durchführen!",
 	"global_cannot_action_role_equal": "{emote_warn} Du kannst diese Aktion nicht an **{user_tag}** durchführen, da du keine höhere Rolle als der Nutzer hast!",
         "global_cannot_action_role_equal_bot": "{emote_warn} Du kannst diese Aktion nicht an **{user_tag}** durchführen, da meine Rolle niedriger als eine Rolle des Nutzers ist!",
-	"global_cannot_action_role_higher": "{emote_warn} Du kannst diese Aktion nicht an **{user_tag}** durchführen, Da er eine höhere Rolle als du hast!",
-	"global_cannot_action_role_higher_bot": "{emote_warn} Du kannst diese Aktion nicht an **{user_tag}** durchführen, da er eine Höhere Rolle als ich hat!",
-	"global_cannot_action_bot_self": "{emote_warn} You cannot perform this action on the bot!",
+	"global_cannot_action_role_higher": "{emote_warn} Du kannst diese Aktion nicht an **{user_tag}** durchführen, da der Nutzer eine höhere Rolle als du hat!",
+	"global_cannot_action_role_higher_bot": "{emote_warn} Du kannst diese Aktion nicht an **{user_tag}** durchführen, da der Nutzer eine höhere Rolle als ich hat!",
+	"global_cannot_action_bot_self": "{emote_warn} Du kannst diese Aktion nicht an mir selbst durchführen!",
 
-	"premium_message": "Das ist ein Premium Befehl, Werde Patreon und bekomme Zugriff auf die Premium Befhele <https://www.patreon.com/bulbbot>",
+	"premium_message": "Das ist ein Premium Befehl! Du kannst auf diesen Befehl zugreifen, in dem du uns auf Patreon unterstützt: <https://www.patreon.com/bulbbot>",
 
 	"event_message_args_unexpected": "{emote_warn} Unerwartetes Argument `{arg}`. Erwartet `{arg_expected}` bekommen `{arg_provided}`\n{emote_wrench} **Korrekte Benutzung:** {usage}",
 	"event_message_args_missing": "{emote_warn} Fehlendes Argument `{arg}`. Erwartet `{arg_expected}` bekommen `{arg_provided}`\n{emote_wrench} **Korrekte Benutzung:** {usage}",
@@ -31,17 +31,17 @@
 	"event_message_delete": "{emote_trash} Nachricht von **{target_tag}** `{target_id}` wurde gelöscht in <#{channel_id}>\n`ID (channel-message): {after_channel_id}-${after_id}`\n**C:** {content} \n**A:** {attachment}\n**E:** {embed}",
 
 	"event_channel_create": "**Kanal erstellt:** <#{channel_id}> `({channel_type})`",
-	"event_channel_delete": "**Kanal geköscht:** #{channel_name} `({channel_id})` `({channel_type})`",
-	"event_channel_update_topic_added": "<#{channel_id}> Kanal Thema wurde hinzugefügt `{channel_topic}`\n",
-	"event_channel_update_topic_removed": "<#{channel_id}> Kanal Thema wurde entfernt\n",
-	"event_channel_update_topic_updated": "<#{channel_id}> Kanal Thema wurde von `{oldchannel_topic}` zu `{newchannel_topic} geändert`\n",
-	"event_channel_update_name": "<#{channel_id}> Name wurde von `#{oldchannel_name}` zu `#{newchannel_name} geändert`\n",
-	"event_channel_update_type": "<#{channel_id}> Art wurde von `{oldchannel_type}` zu `{newchannel_type} geändert`\n",
-	"event_channel_update_nsfw_enabled": "<#{channel_id}> nsfw wurde `aktiviert`\n",
-  "event_channel_update_nsfw_disabled": "<#{channel_id}> nsfw wurde `deaktiviert`\n",
+	"event_channel_delete": "**Kanal gelöscht:** #{channel_name} `({channel_id})` `({channel_type})`",
+	"event_channel_update_topic_added": "<#{channel_id}> Kanalthema wurde hinzugefügt `{channel_topic}`\n",
+        "event_channel_update_topic_removed": "<#{channel_id}> Kanalthema wurde entfernt\n",
+	"event_channel_update_topic_updated": "<#{channel_id}> Kanalthema wurde von `{oldchannel_topic}` auf `{newchannel_topic} gesetzt`\n",
+	"event_channel_update_name": "<#{channel_id}> Name wurde von `#{oldchannel_name}` auf `#{newchannel_name} gesetzt`\n",
+	"event_channel_update_type": "<#{channel_id}> Die Kanal-art wurde von `{oldchannel_type}` zu `{newchannel_type} gesetzt`\n",
+	"event_channel_update_nsfw_enabled": "in <#{channel_id}> wurde NSFW `aktiviert`\n",
+        "event_channel_update_nsfw_disabled": "in <#{channel_id}> wurde NSFW `deaktiviert`\n",
 
 	"event_member_joined": "{emote_join} **Neues Mitglied:** **{user_tag}** `({user_id})` - **Account erstellt:** {user_age}",
-	"event_member_left": "{emote_leave} **Mitglied hat uns Verlassen:** **{user_tag}** `({user_id})`",
+	"event_member_left": "{emote_leave}  **{user_tag}** `({user_id})` hat uns Verlassen",
 
 	"event_member_update_nickname": "{emote_warn} **{user_tag}** `({user_id})` hat seinen Nicknamen von `{nick_old}` zu `{nick_new} geändert`",
 	"event_member_update_role_add": "{emote_warn} Die Rolle **{role}** wurde zu  **{user_tag}**  `({user_id}) hinzugefügt`",
